[gd_scene load_steps=9 format=2]

[ext_resource path="res://Models/EnergySource/Smoke.png" type="Texture" id=1]
[ext_resource path="res://Models/EnergySource/Smoke.gd" type="Script" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.736364 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.1
angular_velocity = 40.0
angular_velocity_random = 1.0
angle = 360.0
angle_random = 1.0
scale = 5.0
scale_random = 0.8
scale_curve = SubResource( 2 )
color = Color( 0, 0, 0, 0.54902 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )

[sub_resource type="CylinderShape" id=6]
radius = 1.4569
height = 17.6917

[node name="Spatial" type="Area"]
script = ExtResource( 2 )

[node name="Particles" type="Particles" parent="."]
amount = 50
lifetime = 4.0
randomness = 1.0
draw_order = 2
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.81258, 0 )
shape = SubResource( 6 )

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="body_entered" from="." to="." method="_on_Spatial_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spatial_body_exited"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
